JDK9 compatibility: replace DatatypeConverter with Base64 (#999)